; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_timer.c_ar9300_start_tsf2.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_timer.c_ar9300_start_tsf2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }
%struct.ath_hal_9300 = type { i64 }

@AR_DIRECT_CONNECT = common dso_local global i32 0, align 4
@AR_DC_AP_STA_EN = common dso_local global i32 0, align 4
@AR_RESET_TSF = common dso_local global i32 0, align 4
@AR_RESET_TSF2_ONCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar9300_start_tsf2(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  %3 = alloca %struct.ath_hal_9300*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %4 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %5 = call %struct.ath_hal_9300* @AH9300(%struct.ath_hal* %4)
  store %struct.ath_hal_9300* %5, %struct.ath_hal_9300** %3, align 8
  %6 = load %struct.ath_hal_9300*, %struct.ath_hal_9300** %3, align 8
  %7 = getelementptr inbounds %struct.ath_hal_9300, %struct.ath_hal_9300* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %12 = load i32, i32* @AR_DIRECT_CONNECT, align 4
  %13 = load i32, i32* @AR_DC_AP_STA_EN, align 4
  %14 = call i32 @OS_REG_SET_BIT(%struct.ath_hal* %11, i32 %12, i32 %13)
  %15 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %16 = load i32, i32* @AR_RESET_TSF, align 4
  %17 = load i32, i32* @AR_RESET_TSF2_ONCE, align 4
  %18 = call i32 @OS_REG_SET_BIT(%struct.ath_hal* %15, i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %10, %1
  ret void
}

declare dso_local %struct.ath_hal_9300* @AH9300(%struct.ath_hal*) #1

declare dso_local i32 @OS_REG_SET_BIT(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
